# GuitarHero

./: .gitignore  Readme.md  compose.monitoring.yaml  compose.yaml  nginx_proxy.conf
.github/workflows/: ci-cd.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: db.py  main.py  repository.py  schemas.py
backend/tests/: test_main.py
client/: .dockerignore  Dockerfile  package-lock.json  package.json
client/src/api/: client.test.js  client.ts
client/src/components/: ChordChard.tsx  Controls.tsx  Timer.tsx
client/src/components/charts/: AccuracyChart.tsx  StatsDashboard.tsx
client/src/hooks/: hooks.test.ts  usePitchDetection.ts
client/src/pages/: Home.tsx
monitoring/: prometheus.yml
sql/: .sqlfluff  init.sql
